--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ header .icon i:hover {
 
 /* icons */
 .icons {
-    background-color: #eee;
+    background-color: rgba(255, 51, 153, 0.07);
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
@@ -510,185 +510,6 @@ footer .credit {
 footer .credit span {
     color: var(--maim-color);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 @media (max-width:768px) {
